   for which I apologize.  Both bugs should now be fixed.
 * kde-common is no longer required to support checkout-only, and will no
   longer be automatically downloaded.  It will still be downloaded if you
   place it in your .kdecvs-buildrc.
 * qt-copy bugfix #2312: Although the last attempt to reconfigure qt-copy was
   inspired, it was ultimately flawed due to programmer incompetence.

Version history: 0.71
 * qt-copy bugfix #2342: Force configure to run if qt-copy hasn't been
   configured.
 * Added use-qt-builddir-hack option.
 * Accept GPL license by default for qt-copy.
 * Debug mode improvements.
 * Better script header documentation.
 * Symlink to latest log directory.
 * Check if admin dir has downloaded, and if not, make it do so.

Version history: 0.70
 * Fix the --no-build option.
 * Add the stop-after-failure config file option.
 * The script now comes in its own directory instead of messing up your pwd.
 * Fix handling of the /admin directory on modules where checkout-only is set,
   but had already been checked out.
 * Workaround bug in autorebuilding for qt-copy until I figure out what's
   going on.

Version history: 0.66
 * Make sure UNSERMAKE isn't defined if the module says not to use unsermake.
 * Really fix the bug where "Script starts" output even for dumb things like
   the -v flag.
 * Keep environment changes in the build process for one module from affecting
   other modules.  This should fix a build bug in kdepim due to qt-copy.

Version history: 0.65 2004-Jun-03
 * Fix a horrible horrible bug, where some functions still tried to use the old
   version of log_command(), crashing the script.

Version history: 0.64 2004-Jun-03
 * Basically a code cleanup release, but I did manage to sneak in a few
   bugfixes and features.
 * kdecvs-build will now attempt to rebuild a module from scratch after an
   incremental make failure. You can disable this per-module using the
   no-rebuild-on-fail option.