@@ -84,6 +84,11 @@ automatically downloaded.  It will still be downloaded if you place it in your
 only when needed was inspired, it was ultimately flawed due to programmer
 incompetence. ;-)</li>
 
+<li>Rearrange command-line options a little bit so that you can pass the <a
+href="#cmdline-help">--help</a> and <a href="#cmdline-version">--version</a>
+options to the script without having to have a configuration file installed.
+</li>
+
 <li>Although not related to the end-user experience of the script per se, my
 packing script for kdecvs-build has been updated in the downtime while testing
 the script, and now keeps me from doing stupid stuff like forgetting to
@@ -735,7 +740,7 @@ href="#options">.kdecvs-buildrc options</a>.
 <div align="center" class="thankyou">
 <font size="-1"><a href="http://www.cvsup.org/">CVSup</a> is a registered trademark of John D. Polstra.
 <br/>
-Last modified: Sun Jun 13 03:05:49 2004</font>
+Last modified: Sun Jun 13 03:12:10 2004</font>
 </div>
 </body>
 </html>
