@@ -1648,9 +1648,9 @@ sub handle_install
 
 # Script starts.
 
+process_arguments();
 read_options();
 initialize_environment();
-process_arguments();
 
 dump_options() if get_option('global', 'debug');
 
