@@ -8,6 +8,9 @@ Version history: 0.72
    place it in your .kdecvs-buildrc.
  * qt-copy bugfix #2312: Although the last attempt to reconfigure qt-copy was
    inspired, it was ultimately flawed due to programmer incompetence.
+ * Rearrange startup sequence a little bit so that you can pass command-line
+   options like -v and -h to the program without having to have a configuration
+   file.
 
 Version history: 0.71
  * qt-copy bugfix #2342: Force configure to run if qt-copy hasn't been
